--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -56,11 +56,11 @@
                                 rules: [
                                     {
                                         type   : 'empty',
-                                        prompt : 'Please enter your e-mail'
+                                        prompt : '请输入邮箱'
                                     },
                                     {
                                         type   : 'email',
-                                        prompt : 'Please enter a valid e-mail'
+                                        prompt : '请输入有效邮箱'
                                     }
                                 ]
                             },
@@ -69,11 +69,11 @@
                                 rules: [
                                     {
                                         type   : 'empty',
-                                        prompt : 'Please enter your password'
+                                        prompt : '请输入密码'
                                     },
                                     {
                                         type   : 'length[6]',
-                                        prompt : 'Your password must be at least 6 characters'
+                                        prompt : '请输入大于6位密码'
                                     }
                                 ]
                             }
@@ -91,7 +91,7 @@
         <h2 class="ui teal image header">
             <img src="logo.png" class="image">
             <div class="content">
-                Sign In
+                登录
             </div>
         </h2>
         <form class="ui large form" onsubmit="return false">
@@ -99,16 +99,16 @@
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input type="text" name="email" placeholder="E-mail address" id="email">
+                        <input type="text" name="email" placeholder="电子邮件地址" id="email">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        <input type="password" name="password" placeholder="Password" id="password">
+                        <input type="password" name="password" placeholder="密码" id="password">
                     </div>
                 </div>
-                <div class="ui fluid large teal submit button" id="login">Login</div>
+                <div class="ui fluid large teal submit button" id="login">登录</div>
             </div>
 
             <div class="ui error message"></div>
@@ -116,12 +116,12 @@
         </form>
 
         <div class="ui message">
-            New to us? <a href="/registry">Sign Up</a>
+            未注册账号？ <a href="/registry">注册</a>
         </div>
     </div>
 </div>
 <script type="text/javascript" charset="UTF-8">
-    //注册账号
+    //登录账号
     $("#login").on("click", function(){  //点击login触发行为
         $.ajax({
             url:"/user/login",
@@ -132,8 +132,8 @@
             },
             resultType:"JSON",
             success:function (result){
-                alert(result.message)       //返回到服务端
-                if(200 == result.code){     //注册成功跳转
+                alert(result.message)       //返回登录成功提示框,message为UserService中的resultMap
+                if(200 === result.code){     //注册成功跳转
                     window.location.href = "https://www.lezijie.com";
                 }
             },
