--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,47 +45,8 @@
             max-width: 450px;
         }
     </style>
-    <script>
-        $(document)
-            .ready(function() {
-                $('.ui.form')
-                    .form({
-                        fields: {
-                            email: {
-                                identifier  : 'email',
-                                rules: [
-                                    {
-                                        type   : 'empty',
-                                        prompt : '请输入邮箱'
-                                    },
-                                    {
-                                        type   : 'email',
-                                        prompt : '请输入有效邮箱'
-                                    }
-                                ]
-                            },
-                            password: {
-                                identifier  : 'password',
-                                rules: [
-                                    {
-                                        type   : 'empty',
-                                        prompt : '请输入密码'
-                                    },
-                                    {
-                                        type   : 'length[6]',
-                                        prompt : '请输入大于6位密码'
-                                    }
-                                ]
-                            }
-                        }
-                    })
-                ;
-            })
-        ;
-    </script>
 </head>
 <body>
-
 <div class="ui middle aligned center aligned grid">
     <div class="column">
         <h2 class="ui teal image header">
@@ -120,28 +81,7 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" charset="UTF-8">
-    //登录账号
-    $("#login").on("click", function(){  //点击login触发行为
-        $.ajax({
-            url:"/user/login",
-            type:"POST",
-            data:{
-                email: $("#email").val(), //获取email
-                password: $("#password").val()
-            },
-            resultType:"JSON",
-            success:function (result){
-                alert(result.message)       //返回登录成功提示框,message为UserService中的resultMap
-                if(200 === result.code){     //注册成功跳转
-                    window.location.href = "https://www.lezijie.com";
-                }
-            },
-            error:function (result){}
-
-        })
-    });
-</script>
+<script type="text/javascript" th:src="@{/login/login.js}"></script>
 </body>
 
 </html>
