--- a/src/main/resources/templates/chatroom.html
+++ b/src/main/resources/templates/chatroom.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Spring Boot WebSocket Chat Application</title>
+    <title>网络聊天室</title>
     <link rel="stylesheet" type="text/css" th:href="@{/chatroom/chatroom.css}">
 
 </head>
@@ -12,27 +12,15 @@
     <h2>Sorry! Your browser doesn't support Javascript</h2>
 </noscript>
 
-<div id="username-page">
-    <div class="username-page-container">
-        <h1 class="title">Type your username</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"/>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="accent username-submit">Start Chatting</button>
-            </div>
-        </form>
-    </div>
-</div>
 
-<div id="chat-page" class="hidden">
+
+<div id="chat-page">
     <div class="chat-container">
         <div class="chat-header">
-            <h2>Spring WebSocket Chat Demo</h2>
+            <h2>网络聊天室</h2>
         </div>
         <div class="connecting">
-            Connecting...
+            连接中...
         </div>
         <ul id="messageArea">
 
@@ -40,8 +28,8 @@
         <form id="messageForm" name="messageForm">
             <div class="form-group">
                 <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-                    <button type="submit" class="primary">Send</button>
+                    <input type="text" id="message" autocomplete="off" class="form-control"/>
+                    <button type="submit" class="primary">发送</button>
                 </div>
             </div>
         </form>
