--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -50,8 +50,8 @@
     <form id="messageForm" name="messageForm">
       <div class="form-group">
         <div class="input-group clearfix">
-          <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-          <input type="text" id="receiver" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+          <input type="text" id="receiver" placeholder="请输入接受者，群发不用输入" autocomplete="off" class="form-control"/>
+          <input type="text" id="message" placeholder="请输入信息" autocomplete="off" class="form-control"/>
           <button type="submit" class="primary">Send</button>
         </div>
       </div>
