--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -39,7 +39,7 @@
 <div id="chat-page">
   <div class="chat-container">
     <div class="chat-header">
-      <h2 id="userOfNum"></h2>
+      <h2 id="numArea"></h2>
     </div>
     <div class="connecting">
       Connecting...
