--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -30,19 +30,16 @@
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/components/transition.js"></script>
 </head>
 <body>
-<noscript>
-  <h2>Sorry! Your browser doesn't support Javascript</h2>
-</noscript>
 
-<h2 class="ui center aligned icon header"><i class="circular users icon"></i> 网络聊天室 </h2>
+<h2 class="ui center aligned icon header"><i class="circular users icon"></i></h2>
 
 <div id="chat-page">
   <div class="chat-container">
     <div class="chat-header">
-      <h2 id="userOfNum"></h2>
+      <h3 id="onlineUser"></h3>
     </div>
     <div class="connecting">
-      Connecting...
+      正在连接中...
     </div>
     <ul id="messageArea">
 
@@ -52,7 +49,7 @@
         <div class="input-group clearfix">
           <input type="text" id="receiver" placeholder="请输入接受者，群发不用输入" autocomplete="off" class="form-control"/>
           <input type="text" id="message" placeholder="请输入信息" autocomplete="off" class="form-control"/>
-          <button type="submit" class="primary">Send</button>
+          <button type="submit" class="primary">发送</button>
         </div>
       </div>
     </form>
