修改 html <title> 修改 favicon.ico 位置 使其显示正常

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -3,10 +3,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <title>Spring Boot WebSocket Chat Application</title>
+  <title>网络聊天室</title>
   <link rel="stylesheet" type="text/css" th:href="@{/chat/chat.css}">
   <!-- Site Properties -->
-  <title>Login Example - Semantic</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/components/site.css">
 
